name:               chaths
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Brian McClelland
build-type:         Simple
cabal-version:      >=1.18

executable chaths
    ghc-options:        -Wall -Wcompat -Wmissing-fields
    hs-source-dirs:     src
    main-is:            Main.hs
    default-language:   Haskell2010
    default-extensions:
        LambdaCase
        RecordWildCards
        RankNTypes
        TupleSections
        ScopedTypeVariables
    build-depends:       
        base >= 4.7 && < 5
    other-modules:
